--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "type": "module",
   "main": "index.js",
+ 
   "scripts": {
-    "start": "nodemon index.js"
-  },
+  "start": "node index.js",
+  "dev": "nodemon index.js"
+},
 
 
 
